src/OpenCvSharpExtern/flann_IndexParams.h

// cv::flann::AutotunedIndexParams

CVAPI(ExceptionStatus) flann_Ptr_AutotunedIndexParams_new(
    float target_precision, float build_weight, float memory_weight, float sample_fraction, cv::Ptr<cv::flann::AutotunedIndexParams> **returnValue)
{
    return cvTry([&] {
    *returnValue = new cv::Ptr<cv::flann::AutotunedIndexParams>(new cv::flann::AutotunedIndexParams(target_precision, build_weight, memory_weight, sample_fraction));
    });
}
CVAPI(ExceptionStatus) flann_Ptr_AutotunedIndexParams_get(
    cv::Ptr<cv::flann::AutotunedIndexParams> *ptr, cv::flann::AutotunedIndexParams **returnValue)
{
    return cvTry([&] {
    *returnValue = ptr->get();
    });
}
CVAPI(ExceptionStatus) flann_Ptr_AutotunedIndexParams_delete(cv::Ptr<cv::flann::AutotunedIndexParams> *obj)
{
    return cvTry([&] {
    delete obj;
    });
}
// cv::flann::SavedIndexParams

CVAPI(ExceptionStatus) flann_Ptr_SavedIndexParams_new(const char* filename, cv::Ptr<cv::flann::SavedIndexParams> **returnValue)
{
    return cvTry([&] {
    *returnValue = new cv::Ptr<cv::flann::SavedIndexParams>(new cv::flann::SavedIndexParams(filename));
    });
}
CVAPI(ExceptionStatus) flann_Ptr_SavedIndexParams_get(
    cv::Ptr<cv::flann::SavedIndexParams> *ptr, cv::flann::SavedIndexParams **returnValue)
{
    return cvTry([&] {
    *returnValue = ptr->get();
    });
}
CVAPI(ExceptionStatus) flann_Ptr_SavedIndexParams_delete(cv::Ptr<cv::flann::SavedIndexParams> *obj)
{
    return cvTry([&] {
    delete obj;
    });
}
// cv::flann::SearchParams

CVAPI(ExceptionStatus) flann_Ptr_SearchParams_new(int checks, float eps, int sorted, cv::Ptr<cv::flann::SearchParams> **returnValue)
{
    return cvTry([&] {
    *returnValue = new cv::Ptr<cv::flann::SearchParams>(new cv::flann::SearchParams(checks, eps, (sorted != 0)));
    });
}
CVAPI(ExceptionStatus) flann_Ptr_SearchParams_get(
    cv::Ptr<cv::flann::SearchParams> *ptr, cv::flann::SearchParams **returnValue)
{
    return cvTry([&] {
    *returnValue = ptr->get();
    });
}
CVAPI(ExceptionStatus) flann_Ptr_SearchParams_delete(cv::Ptr<cv::flann::SearchParams> *obj)
{
    return cvTry([&] {
    delete obj;
    });
}